--- a/assets/css/custome.css
+++ b/assets/css/custome.css
@@ -443,6 +443,15 @@ th {
   border-color: rgb(25, 28, 58) !important;
 }
 
+.custom-toast div {
+  width: 680px; 
+}
+
+.custom-toast {
+  max-width: 500px;
+  width: 100%;
+}
+
 @media (max-width: 480px) {
   .MobCard {
     color: yellow !important;
