--- a/assets/css/custome.css
+++ b/assets/css/custome.css
@@ -444,12 +444,20 @@ th {
 }
 
 .custom-toast div {
-  width: 680px; 
+  width: 680px;
 }
 
 .custom-toast {
   max-width: 500px;
   width: 100%;
+}
+
+.p-datatable-header input {
+  border-radius: 7px;
+}
+
+.p-scrollpanel-content {
+  width: calc(100% + -8px) !important;
 }
 
 @media (max-width: 480px) {
