--- a/assets/css/custome.css
+++ b/assets/css/custome.css
@@ -461,6 +461,10 @@ th {
   width: calc(100% + -8px) !important;
 }
 
+.wid75  p-autoComplete {
+  width: 75%;
+}
+
 @media (max-width: 480px) {
   .MobCard {
     color: yellow !important;
