--- a/assets/css/style.rtl.css
+++ b/assets/css/style.rtl.css
@@ -55662,7 +55662,7 @@ canvas {
     padding-top: 65px;
   }
   .header-fixed.toolbar-fixed .wrapper {
-    padding-top: calc(65px + var(--kt-toolbar-height));
+    /* padding-top: calc(65px + var(--kt-toolbar-height)); */
   }
 }
 @media (max-width: 991.98px) {
