--- a/assets/css/custome.css
+++ b/assets/css/custome.css
@@ -225,7 +225,7 @@ p-pickList .pi-angle-double-left:before {
 
 }
 
-.p-datatable  p-columnfilter .p-inputtext {
+.p-datatable p-columnfilter .p-inputtext {
   font-family: "tajawal-black" !important;
   width: 100% !important;
 
@@ -492,7 +492,12 @@ th {
   padding-top: 20px;
 }
 
- 
+.win-mobile-test-price {
+  width: 70% !important;
+  text-align: center;
+  margin: 0 auto;
+}
+
 
 @media (max-width: 480px) {
   .MobCard {
@@ -504,6 +509,12 @@ th {
 
   .Mob-SearchDataTable {
     display: none !important;
+  }
+
+  .win-mobile-test-price {
+    width: 100% !important;
+    text-align: center;
+    margin: 0 auto;
   }
 }
 
