--- a/assets/css/custome.css
+++ b/assets/css/custome.css
@@ -151,11 +151,9 @@ p-splitbutton {
 
 .pi-chevron-left:before {
   content: "\e901";
-}
-
+} 
 
 .fc-primng {
-  display: block;
   width: 100%;
   font-weight: 500;
   line-height: 1.5;
@@ -168,9 +166,7 @@ p-splitbutton {
   border-radius: 0.475rem;
   box-shadow: inset 0 1px 2px rgb(0 0 0 / 8%);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-
+} 
 
 .menu-arrow {
   transform: rotateZ(180deg) !important;
@@ -498,7 +494,22 @@ th {
   margin: 0 auto;
 }
 
+/* p-dock ul {
+  padding-right: 0px !important;
+}
 
+p-dropdown ul {
+  padding-right: 0px !important;
+} */
+
+ol,
+ul {
+  padding-right: 0px !important
+}
+
+.p-tabview .p-tabview-panels {
+    padding: 0px !important
+}
 @media (max-width: 480px) {
   .MobCard {
     color: yellow !important;
